--- a/spec/fixtures/customer_valid_data.yml
+++ b/spec/fixtures/customer_valid_data.yml
@@ -72,6 +72,7 @@
 :customer_disc_group: !ruby/string:Nori::StringWithAttributes
   str: SLUT
   attributes: {}
+:internal_cust: true
 :allow_line_disc: true
 :prices_including_vat: false
 :prepayment: !ruby/string:Nori::StringWithAttributes
